# studium

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
studium/: repomix-output.xml
studium/apps/lessons/: admin.py  models.py
studium/apps/lessons/migrations/: 0001_initial.py
studium/config/: middleware.py  settings.py  urls.py
studium/lessons/: admin.py  block_registry.py  decorators.py  forms.py  models.py  teaching_views.py  urls.py  validators.py  views.py
studium/lessons/migrations/: 0001_initial.py  0002_remove_block_unique_block_order_in_lesson_and_more.py  0003_course_detail_image_course_enrollment_code_and_more.py  0004_certificatetemplate_coursecompletion_lessonprogress_and_more.py  0005_lessonprogress_score_percent.py  0006_student_groups_lesson_study_time.py  0007_rename_lessons_les_student_lesson_time_idx_lessons_les_student_833c5d_idx.py  0008_lesson_deadline_remove_block_deadlines.py
studium/lessons/templates/lessons/: catalog.html  course_detail.html  lesson_view.html  student_calendar.html
studium/lessons/templates/lessons/components/: course_card.html
studium/lessons/templates/lessons/teaching/: _block_preview.html  _course_form_fields.html  (+6 more)
studium/templates/: 404.html  base.html
studium/users/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
studium/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_learning_seconds.py  0004_user_calendar_token.py
studium/users/templates/users/: certificates.html  change_password.html  edit_profile.html  login.html  profile.html  register.html
(+3 files in other folders)
